fixed checkbox alignment and added tests. (#34)
fixed checkbox alignment and added tests.

--- a/manon/form-horizontal-view-fieldset-variables.scss
+++ b/manon/form-horizontal-view-fieldset-variables.scss
@@ -5,6 +5,6 @@
   /* Label */
   --form-horizontal-view-fieldset-label-margin-top: 0.75rem;
 
-  /* Label required*/
-  --form-horizontal-view-fieldset-label-required-margin-top: 1.5rem;
+  /* nota-bene */
+  --form-horizontal-view-fieldset-nota-bene-required-margin-bottom: 1rem;
 }
